Cria o caminho para os arquivos .class

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "java.project.sourcePaths": [
-        "lab03/lombriga",
-        "lab03/pt/c02oo/s02classe/s03lombriga"
-    ]
+        "lab03/pt/c02oo/s02classe/s03lombriga",
+        "lab03/src/pt/c02oo/s02classe/s03lombriga"
+    ],
+    "java.project.outputPath": "lab03\\bin\\pt\\c02oo\\s02classe\\s03lombriga"
 }
